started working on the style of index.html to match the design sketch. Menu is not responsive yet though.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
   <meta charset="utf-8">
-  <title>My SPA App</title>
+  <title>Higher Ed Data</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css" />
