--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,9 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header" ng-cloak="">
-      <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-        <div class="container">
+    <div class="container-fluid">
+      <div class="header" ng-cloak="">
+        <div class="navbar" role="navigation">
           <div class="navbar-header">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -41,7 +41,11 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
+          </div>
+        </div>
+        <div class="row">
+          <div class=" col-md-6">
+            <ul class="nav nav-stacked">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/circle">Circle</a></li>
               <li><a ng-href="#/bubble">Bubble</a></li>
@@ -51,13 +55,17 @@
 
             </ul>
           </div>
+          <div id="header-cta" class="col-md-6 cta">
+            <h1>Site Proposition</h1>
+            <p>Just a paragraph to sell the site and explain what it's for</p>
+          </div>
         </div>
       </div>
+
+
+      <div ng-view=""></div>
+
     </div>
-
-    
-    <div ng-view=""></div>
-
 
     <div class="footer">
       <div class="container">
